test/files/neg/t8244e.check
Test.scala:9: error: value exxx is not a member of T
    raw.t.exxx // java.lang.ClassCastException: java.lang.String cannot be cast to X
          ^
one error found
